--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaceMOMO App</title>
+    <meta name="apple-mobile-web-app-title" content="facemomo.com">
+    <meta name="application-name" content="facemomo.com">
+    <link id="apple-touch-icon" rel="apple-touch-icon" href="/icon.png">
+    <title>facemomo.com - MEME yourself!</title>
   </head>
   <body>
     <div id="app"></div>
